--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -2,6 +2,7 @@
   padding: 2rem;
   background-color: #f9f9f9;
 
+
   &__title {
     font-size: 2rem;
     margin-bottom: 1rem;
@@ -10,17 +11,29 @@
   }
 
   &__list {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
-    justify-content: center;
   }
 
   &__image {
     width: 100%;
-    height: auto;
+    height: 60%;
     border-radius: 8px;
     margin-bottom: 10px;
+    object-fit: contain;
+  }
+
+  &__link {
+    display: block;
+    margin-top: 0.5rem;
+    color: #007bff;
+    text-decoration: none;
+    font-weight: 500;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   &__card {
@@ -29,7 +42,7 @@
     border-radius: 8px;
     padding: 1rem;
     width: 100%;
-    max-width: 320px;
+    max-width: 500px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease;
 
@@ -50,16 +63,5 @@
       line-height: 1.4;
     }
 
-    a {
-      display: inline-block;
-      margin-top: 0.5rem;
-      color: #007bff;
-      text-decoration: none;
-      font-weight: 500;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
   }
 }
