--- a/src/components/Education/Education.module.scss
+++ b/src/components/Education/Education.module.scss
@@ -3,7 +3,8 @@
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
+  margin-bottom: 1rem;
+  
   &__title {
     font-size: 2rem;
     margin-bottom: 1.5rem;
