--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -1,15 +1,16 @@
 .skills {
   padding: 2rem;
-  background-color: #f9f9f9;
+  background-color: #333;
+  color: white;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin-bottom: 1rem;
 
   &__title {
+    font-family: 'Open Sans', sans-serif;
     font-size: 2rem;
     margin-bottom: 1.5rem;
     text-align: center;
-    color: #333;
   }
 
   &__list {
@@ -40,7 +41,7 @@
   &__icon {
     font-size: 2rem;
     margin-right: 0.5rem;
-    color: #007acc;
+    color: #ff6347;
     /* Blue color to highlight the icons */
   }
 
