--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,8 @@
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  background-color: #007bff;
+  background-color: #333;
   color: white;
   padding: 15px 30px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -18,20 +18,83 @@
 }
 
 .navList {
-  list-style: none;
   display: flex;
-  gap: 20px;
-  margin: 0;
-  padding: 0;
+  gap: 1.2rem;
+
+  li {
+    position: relative;
+
+    a {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 18px;
+      text-transform: uppercase;
+      text-decoration: none;
+      position: relative;
+      padding: 5px 0;
+      transition: color 0.3s ease;
+      letter-spacing: 1.2px;
+
+      &:before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        height: 2px;
+        width: 100%;
+        background-color: #ff6347;
+        transform: scaleX(0);
+        transform-origin: right;
+        transition: transform 0.3s ease;
+      }
+
+      &:hover {
+        color: #ff6347;
+
+        &:before {
+          transform: scaleX(1);
+          transform-origin: left;
+        }
+      }
+    }
+  }
 }
 
-.navList a {
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-  transition: color 0.3s ease;
+// Анимация появления текста
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
-.navList a:hover {
-  color: #ffdd57;
+// Применение анимации к каждому элементу меню
+.navList li {
+  animation: fadeInUp 0.6s ease forwards;
+  opacity: 0;
+  transform: translateY(20px);
+
+  &:nth-child(1) {
+    animation-delay: 0.1s;
+  }
+
+  &:nth-child(2) {
+    animation-delay: 0.2s;
+  }
+
+  &:nth-child(3) {
+    animation-delay: 0.3s;
+  }
+
+  &:nth-child(4) {
+    animation-delay: 0.4s;
+  }
+
+  &:nth-child(5) {
+    animation-delay: 0.5s;
+  }
 }
