--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -8,22 +8,22 @@
   margin-bottom: 1rem;
 
   &__title {
+    font-family: 'Open Sans', sans-serif;
     font-size: 2rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
     text-align: center;
     color: #333;
   }
 
   &__list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: minmax(100px, auto);
     gap: 1.5rem;
   }
 
   &__image {
     width: 100%;
-    height: 60%;
     border-radius: 8px;
     margin-bottom: 10px;
     object-fit: contain;
@@ -41,19 +41,18 @@
     }
   }
 
-  &__title {
+  &__name {
     font-size: 1.25rem;
     margin-bottom: 0.5rem;
     color: #333333;
-    min-height: 60px;
     display: flex;
     justify-content: center;
   }
 
   &__card {
     display: flex;
-    flex-direction: column; // Stack content vertically
-    justify-content: space-between; // Space out items
+    flex-direction: column;
+    justify-content: space-between;
     height: 100%;
     background-color: #fff;
     border: 1px solid #ddd;
@@ -62,10 +61,12 @@
     width: 100%;
     max-width: 500px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s ease;
+    transition: transform, background-color 0.2s ease;
+    cursor: pointer;
 
     &:hover {
       transform: translateY(-5px);
+      background-color: #fffbf2;
     }
 
 
