--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -3,5 +3,5 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/roboto-regular.woff2') format('woff2');
+  src: url('/fonts/roboto-regular.woff2') format('woff2');
 }
