--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -1,10 +1,13 @@
-@mixin flex-space {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+@use './variables' as *;
+
 
 @mixin transition($property, $duration: 0.3s, $easing: ease-in-out) {
   transition: $property $duration $easing;
 }
 
+@mixin font($size, $height: 1.6, $weight: 400, $style: normal) {
+  font-size: $size;
+  line-height: $height;
+  font-weight: $weight;
+  font-style: $style;
+}
