--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,5 +1,6 @@
 @use './normalize' as *;
 @use './variables' as *;
 @use './mixins' as *;
+@use './placeholder' as *;
 @use './fonts' as *;
 @use './global' as *;
