--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -1,14 +1,18 @@
+@use '../../assets/styles/variables' as *;
+@use '../../assets/styles/placeholder' as *;
+@use '../../assets/styles/mixins' as *;
+
 .skills {
   padding: 2rem;
-  background-color: #333;
-  color: white;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: $secondary-color;
+  color: $white-color;
+  border-radius: 0.5rem;
+  @extend %main-shadow;
   margin-bottom: 1rem;
 
   &__title {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 2rem;
+    @extend %font-secondary;
+    @include font(2rem);
     margin-bottom: 1.5rem;
     text-align: center;
   }
@@ -21,33 +25,29 @@
   }
 
   &__item {
-    display: flex;
-    align-items: center;
+    @extend %flex-center;
     padding: 1rem;
-    background-color: #ffffff;
+    background-color: $white-color;
     border: 1px solid #e0e0e0;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     transition: transform 0.2s, box-shadow 0.2s;
-    width: 150px;
-    justify-content: center;
+    width: 9.375rem;
     text-align: center;
 
     &:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+      transform: translateY(-0.25rem);
+      @extend %main-shadow;
     }
   }
 
   &__icon {
     font-size: 2rem;
     margin-right: 0.5rem;
-    color: #ff6347;
-    /* Blue color to highlight the icons */
+    color: $primary-color;
   }
 
   &__name {
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: #333;
+    @include font(1.2rem, 1.4, 600);
+    color: $secondary-color;
   }
 }
