--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -5,3 +5,19 @@
   font-weight: 400;
   src: url('/fonts/roboto-regular.woff2') format('woff2');
 }
+
+@font-face {
+  font-display: swap;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/montserrat-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Courier New';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/courier-new.woff2') format('woff2');
+}
