--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,5 +1,7 @@
-$primary-color: #007bff;
-$secondary-color: #6c757d;
-$background-color: #f5f5f5;
+$primary-color: #ff6347;
+$secondary-color: #5c5c5c;
+$background-color: #f9f9f9;
+$white-color: #ffffff;
 $text-color: #333;
-$font-size-base: 16px;
+
+$font-size-base: 1rem;
