--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -1,85 +1,59 @@
+@use '../../assets/styles/variables' as *;
+@use '../../assets/styles/placeholder' as *;
 @use '../../assets/styles/mixins' as *;
 
 .projects {
   padding: 2rem;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: $background-color;
+  border-radius: 0.5rem;
+  @extend %main-shadow;
   margin-bottom: 1rem;
 
   &__title {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 2rem;
+    @extend %font-secondary;
+    @include font(2rem);
     margin-bottom: 1.5rem;
     text-align: center;
-    color: #333;
   }
 
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: minmax(6.25rem, auto);
     gap: 1.5rem;
   }
 
   &__image {
     width: 100%;
-    border-radius: 8px;
-    margin-bottom: 10px;
+    border-radius: 0.5rem;
+    margin-bottom: 0.625rem;
     object-fit: contain;
-  }
-
-  &__link {
-    display: block;
-    margin-top: 0.5rem;
-    color: #007bff;
-    text-decoration: none;
-    font-weight: 500;
-
-    &:hover {
-      text-decoration: underline;
-    }
   }
 
   &__name {
     font-size: 1.25rem;
     margin-bottom: 0.5rem;
-    color: #333333;
     display: flex;
     justify-content: center;
   }
 
   &__card {
-    display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    @extend %flex-space;
     height: 100%;
-    background-color: #fff;
+    background-color: $white-color;
     border: 1px solid #ddd;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     padding: 1rem;
     width: 100%;
-    max-width: 500px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: transform, background-color 0.2s ease;
+    max-width: 31.25rem;
+    @extend %main-shadow;
+    @include transition(transform);
     cursor: pointer;
 
     &:hover {
-      transform: translateY(-5px);
+      transform: translateY(-0.3125rem); // 5px = 0.3125rem
       background-color: #fffbf2;
     }
-
-
-
-    p {
-      color: #666;
-      font-size: 0.875rem;
-      line-height: 1.4;
-    }
-
-  }
-
-  &__box {
-    @include flex-space;
   }
 }
