--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,28 +1,32 @@
+@use '../../assets/styles/variables' as *;
+@use '../../assets/styles/placeholder' as *;
+@use '../../assets/styles/mixins' as *;
+
 .footer {
-  background-color: #333;
-  color: white;
+  background-color: $secondary-color;
+  color: $white-color;
   padding: 15px 30px;
   text-align: center;
-}
 
-.footerContent {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-}
+  &__content {
+    @extend %flex-center;
+    flex-direction: column;
+    gap: 10px;
+  }
 
-.socialLinks {
-  display: flex;
-  gap: 15px;
-}
+  &__list {
+    display: flex;
+    gap: 15px;
+  }
 
-.socialLinks a {
-  color: #ff6347;
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
+  &__link {
+    color: $primary-color;
+    text-decoration: none;
+    @include transition(color);
 
-.socialLinks a:hover {
-  color: white;
+    &:hover {
+      color: $white-color;
+    }
+  }
+
 }
