feat: add adaptive menu

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -79,3 +79,18 @@ body {
   @extend %font-primary;
   @include font($font-size-base, 1.6);
 }
+
+.title {
+  @extend %font-secondary;
+  @include font(2rem);
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+
+.section {
+  padding: 2rem;
+  background-color: $background-color;
+  border-radius: 0.5rem;
+  @extend %main-shadow;
+  margin-bottom: 1rem;
+}
