--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -15,12 +15,12 @@
   &__content {
     position: relative;
     background-color: $white-color;
-    border-radius: 0.75rem; // 12px to rem
-    padding: 2rem; // 32px to rem
-    max-width: 50rem; // 800px to rem
+    border-radius: 0.75rem; 
+    padding: 2rem; 
+    max-width: 50rem; 
     width: 90%;
     z-index: 101;
-    box-shadow: 0 0.625rem 1.5625rem rgba(0, 0, 0, 0.3); // 10px to rem
+    box-shadow: 0 0.625rem 1.5625rem rgba(0, 0, 0, 0.3);
     animation: modalFadeIn 0.3s ease;
     overflow-y: auto;
     max-height: 90vh;
@@ -103,7 +103,7 @@
   }
 
   &__links {
-    @extend flex-center;
+    @extend %flex-center;
     gap: 1rem;
     margin-top: 1.5rem;
   }
