--- a/src/pages/PortfolioLanding.module.scss
+++ b/src/pages/PortfolioLanding.module.scss
@@ -10,19 +10,18 @@
 }
 
 .mainContent {
-  flex: 2; // Adjust the flex property based on your design preference
-  margin-right: 20px; // Space between main content and sidebar
+  flex: 2; 
+  margin-right: 20px;
 
   @media (max-width: 768px) {
     margin-right: 0;
-    margin-bottom: 20px; // Space below main content on smaller screens
+    margin-bottom: 20px;
   }
 }
 
 .sidebar {
-  flex: 1; // Adjust the flex property based on your design preference
-
+  flex: 1; 
   @media (max-width: 768px) {
-    width: 100%; // Full width on smaller screens
+    width: 100%; 
   }
 }
