--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -11,3 +11,22 @@
   font-weight: $weight;
   font-style: $style;
 }
+
+
+@mixin media-laptop {
+  @media (max-width: $xl-width) {
+    @content;
+  }
+}
+
+@mixin media-tablet {
+  @media (max-width: $lg-width) {
+    @content;
+  }
+}
+
+@mixin media-mobile {
+  @media (max-width: $m-width) {
+    @content;
+  }
+}
