--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -3,15 +3,32 @@
 @use '../../assets/styles/mixins' as *;
 
 .contacts {
-
   &__item {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     margin-bottom: 1rem;
     display: flex;
     align-items: center;
 
     &__icon {
       margin-right: 0.5rem;
+    }
+
+    @include media-tablet {
+      justify-content: center;
+      font-size: 1rem;
+      margin-bottom: 0.8rem;
+    }
+
+    @include media-mobile {
+      font-size: 0.9rem;
+      margin-bottom: 0.6rem;
+      flex-direction: column;
+      align-items: flex-start;
+
+      &__icon {
+        margin-right: 0;
+        margin-bottom: 0.3rem;
+      }
     }
   }
 
@@ -23,6 +40,10 @@
     &:hover {
       color: $primary-color;
       text-decoration: underline;
+    }
+
+    @include media-mobile {
+      font-size: 0.9rem;
     }
   }
 }
