--- a/src/components/Education/Education.module.scss
+++ b/src/components/Education/Education.module.scss
@@ -3,7 +3,6 @@
 @use '../../assets/styles/mixins' as *;
 
 .education {
-
   &__item {
     display: flex;
     align-items: center;
@@ -18,12 +17,32 @@
       transform: translateY(-0.25rem);
       @extend %main-shadow;
     }
+
+    @include media-tablet {
+      padding: 0.8rem;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    @include media-mobile {
+      padding: 0.6rem;
+    }
   }
 
   &__icon {
     font-size: 2rem;
     margin-right: 1rem;
     color: $primary-color;
+
+    @include media-tablet {
+      font-size: 1.8rem;
+      margin-right: 0;
+      margin-bottom: 0.5rem;
+    }
+
+    @include media-mobile {
+      font-size: 1.5rem;
+    }
   }
 
   &__content {
@@ -34,9 +53,25 @@
   &__course {
     @include font(1.2rem, 1.6, 600);
     color: $secondary-color;
+
+    @include media-tablet {
+      font-size: 1.1rem;
+    }
+
+    @include media-mobile {
+      font-size: 1rem;
+    }
   }
 
   &__institution {
     @include font(1rem);
+
+    @include media-tablet {
+      font-size: 0.9rem;
+    }
+
+    @include media-mobile {
+      font-size: 0.875rem;
+    }
   }
 }
