--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -22,16 +22,39 @@
     @include font(3.125rem, 1.6, 100);
     @extend %font-secondary;
     -webkit-text-stroke: 0.0625rem $primary-color;
-  }
 
-  &__title::before {
-    content: 'My name is Katsiaryna';
-    position: absolute;
-    top: -3.75rem;
-    left: 0;
-    width: 100%;
-    color: $primary-color;
-    animation: stroke 3s forwards ease-in-out;
+    @include media-laptop {
+      @include font(2.5rem, 1.4, 100);
+      top: 0;
+    }
+
+    @include media-tablet {
+      @include font(2rem, 1.3, 100);
+      -webkit-text-stroke: 0.05rem $primary-color;
+    }
+
+    @include media-mobile {
+      @include font(1.5rem, 1.2, 100);
+      -webkit-text-stroke: 0.04rem $primary-color;
+    }
+
+    &::before {
+      content: 'My name is Katsiaryna';
+      position: absolute;
+      top: -3.75rem;
+      left: 0;
+      width: 100%;
+      color: $primary-color;
+      animation: stroke 3s forwards ease-in-out;
+
+      @include media-tablet {
+        top: -1.8rem;
+      }
+
+      @include media-mobile {
+        top: -1.2rem;
+      }
+    }
   }
 
   &__text {
@@ -41,6 +64,20 @@
     border-right: 0.1875rem solid $primary-color;
     width: 100%;
     animation: typing 3.5s steps(40, end) forwards, blink 0.75s step-end infinite;
+
+    @include media-laptop {
+      font-size: 1rem;
+    }
+
+    @include media-tablet {
+      font-size: 0.9rem;
+      border-right-width: 0.15rem;
+    }
+
+    @include media-mobile {
+      font-size: 0.8rem;
+      border-right-width: 0.125rem;
+    }
   }
 }
 
