--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -15,9 +15,9 @@
   &__content {
     position: relative;
     background-color: $white-color;
-    border-radius: 0.75rem; 
-    padding: 2rem; 
-    max-width: 50rem; 
+    border-radius: 0.75rem;
+    padding: 2rem;
+    max-width: 50rem;
     width: 90%;
     z-index: 101;
     box-shadow: 0 0.625rem 1.5625rem rgba(0, 0, 0, 0.3);
@@ -25,11 +25,11 @@
     overflow-y: auto;
     max-height: 90vh;
 
-    @media (max-width: 768px) {
+    @include media-tablet {
       padding: 1.5rem;
     }
 
-    @media (max-width: 480) {
+    @include media-mobile {
       padding: 1rem;
     }
   }
@@ -40,7 +40,7 @@
     right: 0.94rem;
     background: none;
     border: none;
-    font-size: 2rem; 
+    font-size: 2rem;
     color: $secondary-color;
     cursor: pointer;
     transition: color 0.3s ease;
@@ -53,10 +53,10 @@
   &__title {
     @include font(1.8rem, 1.6, 600);
     color: $text-color;
-    margin-bottom: 1rem; 
+    margin-bottom: 1rem;
     text-align: center;
 
-    @media (max-width: 480px) {
+    @include media-mobile {
       @include font(1.5rem);
     }
   }
@@ -66,12 +66,12 @@
     border-radius: 0.5rem;
     margin-bottom: 1rem;
     object-fit: cover;
-    max-height: 25rem; 
+    max-height: 25rem;
   }
 
   &__description {
     color: $secondary-color;
-    margin-bottom: 1rem; 
+    margin-bottom: 1rem;
     @include font(1rem, 1.5);
     text-align: justify;
 
@@ -90,14 +90,14 @@
     @extend %flex-center;
     background: $white-color;
     border-radius: 0.375rem;
-    padding: 0.4rem 0.6rem; 
+    padding: 0.4rem 0.6rem;
     color: $text-color;
     @include font(0.9rem);
   }
 
   &__techIcon {
     margin-right: 0.4rem;
-    font-size: 1.2rem; 
+    font-size: 1.2rem;
     @include font(1.2rem);
     color: $primary-color;
   }
@@ -111,7 +111,7 @@
   &__link {
     @include font(1rem);
     color: $primary-color;
-    border: 0.125rem solid $primary-color; 
+    border: 0.125rem solid $primary-color;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
     transition: background-color 0.3s ease, color 0.3s ease;
