--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -3,12 +3,20 @@
 @use '../../assets/styles/mixins' as *;
 
 .projects {
-
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: minmax(6.25rem, auto);
     gap: 1.5rem;
+
+    @include media-laptop {
+      grid-template-columns: 1fr;
+    }
+
+    @include media-tablet {
+      gap: 1rem;
+      grid-auto-rows: minmax(5rem, auto);
+    }
   }
 
   &__image {
@@ -23,6 +31,10 @@
     margin-bottom: 0.5rem;
     display: flex;
     justify-content: center;
+
+    @include media-mobile {
+      font-size: 1rem;
+    }
   }
 
   &__card {
@@ -40,8 +52,12 @@
     cursor: pointer;
 
     &:hover {
-      transform: translateY(-0.3125rem); // 5px = 0.3125rem
+      transform: translateY(-0.3125rem);
       background-color: #fffbf2;
+    }
+
+    @include media-tablet {
+      max-width: 100%;
     }
   }
 }
