--- a/src/pages/PortfolioLanding.module.scss
+++ b/src/pages/PortfolioLanding.module.scss
@@ -1,27 +1,30 @@
+@use '../assets/styles/mixins' as *;
+
 .container {
   display: flex;
   justify-content: space-between;
   padding: 20px;
 
-  @media (max-width: 768px) {
+  @include media-tablet {
     flex-direction: column;
     align-items: center;
   }
 }
 
 .mainContent {
-  flex: 2; 
+  flex: 2;
   margin-right: 20px;
 
-  @media (max-width: 768px) {
+  @include media-tablet {
     margin-right: 0;
     margin-bottom: 20px;
   }
 }
 
 .sidebar {
-  flex: 1; 
-  @media (max-width: 768px) {
-    width: 100%; 
+  flex: 1;
+
+  @include media-tablet {
+    width: 100%;
   }
 }
